--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/view1">Formula 1 Feeder</a></li>
+    <li><a href="#/view2">BMI Calculation</a></li>
   </ul>
 
 
