Added bootstrap.css as style sheet

--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
-<body>
-  <ul class="menu">
-    <li><a href="#/view1">Formula 1 Feeder</a></li>
-    <li><a href="#/view2">BMI Calculation</a></li>
-  </ul>
-
+<body ng-controller="myAppCtrl">
+  <div class="container">
+    <ul class="nav nav-pills">
+      <li class="{{act1}}" ng-click="myFunction('#/view1')"><a href="#/view1">Formula 1 Feeder</a></li>
+      <li class="{{act2}}" ng-click="myFunction('#/view2')"><a href="#/view2">BMI Calculation</a></li>
+    </ul>
+  </div>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
   <div ng-view></div>
 
   <!--div>Angular seed app: v<span app-version></span></div-->
