--- a/view1/view1.html
+++ b/view1/view1.html
@@ -1,20 +1,24 @@
 <body ng-controller="driversController">
-<input type="text" ng-model="nameFilter" placeholder="Search..."/>
-<table border="2">
-    <thead>
-    <tr><th colspan="4">Drivers Championship Standings</th></tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="driver in driversList | filter:searchFilter">
-        <td>{{$index + 1}}</td>
-        <td>
-            <img src="img/flags/{{driver.Driver.nationality}}.png" />
-            <a href="#/view1/{{driver.Driver.driverId}}">
-            {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
-        </td>
-        <td>{{driver.Constructors[0].name}}</td>
-        <td>{{driver.points}}</td>
-    </tr>
-    </tbody>
-</table>
+<input type="text" ng-model="nameFilter" class="form-control input-lg" placeholder="Search..."/>
+<!--div class="container"-->
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">Drivers Championship Standings</h3>
+        </div>
+        <table class="table table-hover table-condensed table-bordered">
+
+            <tr ng-repeat="driver in driversList | filter:searchFilter">
+                <td>{{$index + 1}}</td>
+                <td>
+                    <img src="img/flags/{{driver.Driver.nationality}}.png" />
+                    <a href="#/view1/{{driver.Driver.driverId}}">
+                    {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
+                </td>
+                <td>{{driver.Constructors[0].name}}</td>
+                <td>{{driver.points}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+<!--/div-->
 </body>
