--- a/view1/driver.html
+++ b/view1/driver.html
@@ -1,6 +1,6 @@
 <section id="main">
     <div class="col-xs-2">
-        <div class="panel panel-info">
+        <div class="panel panel-info mypanel">
             <div class="alert alert-success" role="alert">
                 <a href="./#/drivers" class="alert-link">Back to drivers list</a>
             </div>
@@ -24,11 +24,12 @@
 
     <div class="main-content">
         <div class="col-xs-5">
-            <div class="panel panel-info">
+            <div class="panel panel-info mypanel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Formula 1 2013 Results</h3>
                 </div>
-                <table class="table table-hover table-hover table-bordered">
+
+                <table class="table table-hover table-bordered">
                     <tbody>
                         <tr>
                             <td>Round</td> <td>Grand Prix</td> <td>Team</td> <td>Grid</td> <td>Race</td>
@@ -43,6 +44,7 @@
                         </tr>
                     </tbody>
                 </table>
+
             </div>
         </div>
     </div>
