--- a/view1/view1.html
+++ b/view1/view1.html
@@ -1,5 +1,6 @@
 
 <body ng-controller="driversController">
+
 <div class="container row">
     <div class="col-xs-3">
         <input type="text" ng-model="nameFilter" class="form-control" placeholder="Search..."/>
@@ -8,26 +9,28 @@
 
 <div class="container row">
     <div class="col-xs-5">
-    <div class="panel panel-info">
-        <div class="panel-heading">
-            <h3 class="panel-title">Drivers Championship Standings</h3>
+        <div class="panel panel-info mypanel">
+            <div class="panel-heading">
+                <h3 class="panel-title">Drivers Championship Standings</h3>
+            </div>
+
+
+                <table class="table table-bordered table-hover">
+                    <tr ng-repeat="driver in driversList | filter:searchFilter">
+                        <td>{{$index + 1}}</td>
+                        <td>
+                            <img src="img/flags/{{driver.Driver.nationality}}.png" />
+                            <a href="#/view1/{{driver.Driver.driverId}}">
+                            {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
+                        </td>
+                        <td>{{driver.Constructors[0].name}}</td>
+                        <td>{{driver.points}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+
         </div>
-
-        <table class="table table-hover table-condensed table-bordered">
-
-            <tr ng-repeat="driver in driversList | filter:searchFilter">
-                <td>{{$index + 1}}</td>
-                <td>
-                    <img src="img/flags/{{driver.Driver.nationality}}.png" />
-                    <a href="#/view1/{{driver.Driver.driverId}}">
-                    {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
-                </td>
-                <td>{{driver.Constructors[0].name}}</td>
-                <td>{{driver.points}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
     </div>
 </div>
+
 </body>
