Modify to fix allignment to view in mobile device or ipad.

--- a/view1/driver.html
+++ b/view1/driver.html
@@ -1,6 +1,7 @@
 <section id="main">
+    <div class="widthdriver">
     <div class="col-xs-2">
-        <div class="panel panel-info mypanel">
+        <div class="panel panel-info">
             <div class="alert alert-success" role="alert">
                 <a href="./#/drivers" class="alert-link">Back to drivers list</a>
             </div>
@@ -24,7 +25,7 @@
 
     <div class="main-content">
         <div class="col-xs-5">
-            <div class="panel panel-info mypanel">
+            <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">Formula 1 2013 Results</h3>
                 </div>
@@ -48,5 +49,5 @@
             </div>
         </div>
     </div>
-
+    </div>
 </section>
