--- a/view1/view1.html
+++ b/view1/view1.html
@@ -1,15 +1,15 @@
-
 <body ng-controller="driversController">
 
+<div class="widthdrivers">
 <div class="container row">
     <div class="col-xs-3">
-        <input type="text" ng-model="nameFilter" class="form-control" placeholder="Search..."/>
+        <input type="text" ng-model="nameFilter" class="form-control" width="200px"  placeholder="Search..."/>
     </div>
 </div>
 
 <div class="container row">
     <div class="col-xs-5">
-        <div class="panel panel-info mypanel">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">Drivers Championship Standings</h3>
             </div>
@@ -32,5 +32,5 @@
         </div>
     </div>
 </div>
-
+</div>
 </body>
