--- a/view1/view1.html
+++ b/view1/view1.html
@@ -1,20 +1,19 @@
 <body ng-controller="driversController">
 
-<div class="widthdrivers">
     <div class="container row">
-        <div class="col-xs-3">
-            <input type="text" ng-model="nameFilter" class="form-control" width="200px"  placeholder="Search..."/>
+        <div class="col-xs-5">
+            <input type="text" ng-model="nameFilter" class="form-control" placeholder="Search..."/>
         </div>
     </div>
 
     <div class="container row">
-        <div class="col-xs-5">
+        <div class="col-xs-20">
             <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">Drivers Championship Standings</h3>
                 </div>
 
-
+                <div class="table-responsive">
                     <table class="table table-bordered table-hover">
                         <tr ng-repeat="driver in driversList | filter:searchFilter">
                             <td>{{$index + 1}}</td>
@@ -28,9 +27,9 @@
                         </tr>
                         </tbody>
                     </table>
-
+                </div>
             </div>
         </div>
     </div>
-</div>
+
 </body>
