Adjust screen to fit in mobile and ipad.

--- a/view1/driver.html
+++ b/view1/driver.html
@@ -1,8 +1,7 @@
 <section id="main">
-    <div class="widthdriver">
-
-        <div class="col-xs-2">
-            <div class="panel panel-info">
+    <div class="container">
+        <div class="row">
+            <div class="panel panel-info mypanel">
                 <div class="alert alert-success" role="alert">
                     <a href="./#/drivers" class="alert-link">Back to drivers list</a>
                 </div>
@@ -24,13 +23,13 @@
             </div>
         </div>
 
-        <div class="col-xs-2">
+        <div class="row">
                 <div class="panel panel-info">
                     <div class="panel-heading">
                         <h3 class="panel-title">Formula 1 2013 Results</h3>
                     </div>
 
-                    <!--div class="table-responsive"-->
+                    <div class="table-responsive">
                         <table class="table table-hover table-bordered">
                             <tbody>
                                 <tr>
@@ -47,9 +46,7 @@
                             </tbody>
                         </table>
                     </div>
-                <!--/div-->
-
+                </div>
         </div>
-
     </div>
 </section>
