--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body ng-controller="myAppCtrl">
-  <div class="container">
+  <div class="container-fluid">
 
     <ul class="nav nav-pills">
       <li class="{{act1}}" ng-click="myFunction('#/view1')"><a href="#/view1">Formula 1 Feeder</a></li>
@@ -47,6 +47,7 @@
 
       <li class="{{act3}}" ng-click="myFunction('#/view_phone_cat')"><a href="#/view_phone_cat">Phone Cat</a></li>
     </ul>
+
   </div>
 
   <!--[if lt IE 7]>
