--- a/view1/driver.html
+++ b/view1/driver.html
@@ -3,8 +3,10 @@
         <div class="row">
             <div class="panel panel-info mypanel">
                 <div class="alert alert-success" role="alert">
-                    <a href="./#/drivers" class="alert-link">Back to drivers list</a>
+                    <a href="index.html#/view1" class="alert-link">Back to drivers list</a>
                 </div>
+
+
                 <nav id="secondary" class="main-nav">
                     <div class="driver-picture">
                         <div class="avatar">
