--- a/view_phone_cat/view_phone_cat-detail.html
+++ b/view_phone_cat/view_phone_cat-detail.html
@@ -1,14 +1,24 @@
-<div class="container-fluid" ng-controller="PhoneDetailCtrl">
+<div class="container-fluid">
+
+    <!--div class="phone-images">
+        <img ng-src="{{img}}"
+             class="phone"
+             ng-repeat="img in phone.images"
+             ng-class="{active: mainImageUrl==img}">
+    </div-->
 
     <img ng-src="{{mainImageUrl}}" class="phone">
+
     <h1>{{phone.name}}</h1>
     <p>{{phone.description}}</p>
+
 
     <ul class="phone-thumbs">
         <li ng-repeat="img in phone.images">
             <img ng-src="{{img}}" ng-click="setImage(img)">
         </li>
     </ul>
+
 
     <ul class="specs">
         <li>
@@ -115,5 +125,4 @@
 
     </ul>
 </div>
-
 
