--- a/view_phone_cat/view_phone_cat.html
+++ b/view_phone_cat/view_phone_cat.html
@@ -1,22 +1,29 @@
-<div class="container-fluid" ng-controller="PhoneCatCtrl">
+<div class="container-fluid">
     <div class="row">
 
         <div class="col-md-2">
             <!--Sidebar content-->
+            <div class="container-fluid">
             Search: <input ng-model="query"><br>
             Sort by: <select ng-model="orderProp">
                         <option value="name">Alphabetical</option>
                         <option value="age">Newest</option>
                      </select>
+            </div>
         </div>
 
         <div class="col-md-10">
             <!--Body content-->
             <ul class="phones">
-                <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
-                    <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
-                    <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-                    <p>{{phone.snippet}}</p>
+                <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail phone-listing">
+                    <div class="container-fluid">
+                        <div class="col-sm-1 col-md-1">
+                            <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
+                        </div>
+
+                        <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
+                        <p>{{phone.snippet}}</p>
+                    </div>
                 </li>
             </ul>
         </div>
