Added Movie Stub Functionality

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="view_phone_cat/animations.css">
+  <link rel="stylesheet" href="movie_stub/movie_stub.css">
   <link rel="stylesheet" href="view_phone_cat/view_phone_cat-detail.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 
@@ -46,8 +47,8 @@
         </ul>
       </li>
 
-
       <li class="{{act3}}" ng-click="myFunction('#/view_phone_cat')"><a href="#/view_phone_cat">Phone Category</a></li>
+      <li class="{{act4}}" ng-click="myFunction('#/movie_stub')"><a href="#/movie_stub">Movie Stub</a></li>
     </ul>
 
   </div>
@@ -76,9 +77,11 @@
   <script src="view_phone_cat/animations.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view_bmi/view_bmi.js"></script>
-  <script src="view_phone_cat/view_phone_cat.js"></script>
+  <script src="view_phone_cat/controllers.js"></script>
   <script src="view_phone_cat/filters.js"></script>
   <script src="view_phone_cat/services.js"></script>
+  <script src="movie_stub/controllers.js"></script>
+  <script src="movie_stub/services.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
