--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="container-fluid">
 
     <ul class="nav nav-pills">
-      <li class="{{photography}}" ng-click="myFunction('#/photography')"><a href="#/photography">Edna's Photography</a></li>
+      <li class="{{jobhunt}}" ng-click="myFunction('#/jobhunt')"><a href="#/jobhunt">Job Hunting</a></li>
       <li class="{{act1}}" ng-click="myFunction('#/view1')"><a href="#/view1">Formula 1 Feeder</a></li>
 
       <li class="dropdown {{act2}}" ng-click="myFunction('#/view_bmi')">
@@ -91,8 +91,10 @@
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
 
-  <!--Photography-->
-  <script src="photography/photography.js"></script>
+  <!--Jobhunt-->
+  <script src="jobhunt/jobhunt.js"></script>
+  <script src="jobhunt/manageJob.js"></script>
+  <script src="jobhunt/services.js"></script>
 
 
 </body>
