--- a/jobhunt/manageJob.html
+++ b/jobhunt/manageJob.html
@@ -2,9 +2,9 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h1 class="panel-title">
-                {{paramFlag}} Job Hunting Information {{xxx}}
-            </h1>
+            <h3 class="panel-title">
+                {{paramFlag}} Job Hunting Information
+            </h3>
         </div>
 
         <div class="panel-body">
