--- a/index.html
+++ b/index.html
@@ -35,29 +35,7 @@
 </head>
 
 <body ng-controller="myAppCtrl">
-  <!--<div class="container-fluid">-->
-    <!--nav class="nav nav-pills">
-      <li class="{{jobhunt}}" ng-click="myFunction('#/jobhunt')"><a href="#/jobhunt">Job Hunting</a></li>
-      <li class="{{act1}}" ng-click="myFunction('#/view1')"><a href="#/view1">Formula 1 Feeder</a></li>
 
-      <li class="dropdown {{act2}}" ng-click="myFunction('#/view_bmi')">
-        <a href="" data-toggle="dropdown" class="dropdown-toggle">BMI Calculator<b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#/view_bmi">Metric</a></li>
-          <li><a href="#/view_bmi2">English</a></li>
-        </ul>
-      </li>
-
-      <li class="{{act3}}" ng-click="myFunction('#/view_phone_cat')"><a href="#/view_phone_cat">Phone Category</a></li>
-      <li class="{{act4}}" ng-click="myFunction('#/movie_stub')"><a href="#/movie_stub">Movie Stub</a></li>
-    </nav--!>
-
-
-  <!--</div>-->
-
-
-
-  <!--navbar navbar-default-->
   <nav class="navbar navbar-novido" role="navigation">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -68,7 +46,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Novido</a>
+        <a class="navbar-brand" href="#/home">WNovido App</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,22 +58,13 @@
           <!--<li><a href="#">Link2</a></li>-->
           <li class="{{act1}}" ng-click="myFunction('#/view1')"><a href="#/view1">Formula 1 Feeder</a></li>
 
-          <li class="dropdown">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">BMI Calculator <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <!--<li><a href="#">Action</a></li>-->
-              <!--<li><a href="#">Another action</a></li>-->
-              <!--<li><a href="#">Something else here</a></li>-->
-              <!--<li class="divider"></li>-->
-              <!--<li><a href="#">Separated link</a></li>-->
-              <!--<li class="divider"></li>-->
-              <!--<li><a href="#">One more separated link</a></li>-->
-
-              <li><a href="#/view_bmi">Metric</a></li>
-              <li><a href="#/view_bmi2">English</a></li>
-
-            </ul>
-          </li>
+          <!--<li class="dropdown">-->
+            <!--<a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">BMI Calculator <span class="caret"></span></a>-->
+            <!--<ul class="dropdown-menu" role="menu">-->
+              <!--<li><a href="#/view_bmi">Metric</a></li>-->
+              <!--<li><a href="#/view_bmi2">English</a></li>-->
+            <!--</ul>-->
+          <!--</li>-->
 
 
           <li class="{{act3}}" ng-click="myFunction('#/view_phone_cat')"><a href="#/view_phone_cat">Phone Category</a></li>
@@ -104,12 +73,12 @@
         </ul>
 
 
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <!--<form class="navbar-form navbar-left" role="search">-->
+          <!--<div class="form-group">-->
+            <!--<input type="text" class="form-control" placeholder="Search">-->
+          <!--</div>-->
+          <!--<button type="submit" class="btn btn-default">Submit</button>-->
+        <!--</form>-->
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     
@@ -163,6 +132,8 @@
   <script src="jobhunt/manageJob.js"></script>
   <script src="jobhunt/services.js"></script>
 
+  <script src="core/home.js"></script>
 
+  <div class="text-center">Copyright(c) Wilson Novido <span app-version></span></div>
 </body>
 </html>
