--- a/membership/membership.html
+++ b/membership/membership.html
@@ -52,7 +52,7 @@
     <h3 class="modal-title">Confirm Delete</h3>
   </div>
   <div class="modal-body">
-    <tr>Are you sure you want to delete this job application record?</tr>
+    Are you sure you want to delete this job application record?
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Yes</button>
