--- a/membership/membership.html
+++ b/membership/membership.html
@@ -26,7 +26,7 @@
             <td>{{membership.memberEmail}}</td>
             <td>{{membership.memberPhone}}</td>
             <td><a ng-href="#/manageMember/{{$index}}" class="btn btn-info btn-xs"><i class="glyphicon glyphicon-edit"></i></a></td>
-            <td><button type="submit" class="btn btn-danger pull-center btn-xs" ng-click="openDeleteConfirm('sm',$index)"><span class="glyphicon glyphicon-trash"></span></td>
+            <td><button type="submit" class="btn btn-danger pull-center btn-xs" ng-click="openDeleteMemberConfirm('sm',$index)"><span class="glyphicon glyphicon-trash"></span></td>
           </tr>
 
           <tr data-ng-show="memberships.length <= 0">
@@ -47,12 +47,12 @@
 
 
 
-<script type="text/ng-template" id="myModalContent.html">
+<script type="text/ng-template" id="myMemberModalContent.html">
   <div class="modal-header">
     <h3 class="modal-title">Confirm Delete</h3>
   </div>
   <div class="modal-body">
-    Are you sure you want to delete this job application record?
+    Are you sure you want to delete this record?
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Yes</button>
