--- a/membership/membership.html
+++ b/membership/membership.html
@@ -41,10 +41,33 @@
       <div class="panel-footer">
         <a ng-href="#/manageMember/-1" class="btn btn-warning btn-xs pull-left"><i class="glyphicon glyphicon-plus"></i>New Member</a>
         <label></label>
+        <td><button type="submit" class="btn btn-success pull-center btn-xs" ng-click="getForm()"><span class="glyphicon glyphicon-export"></span></td>
       </div>
-  </div>
+    <div id="exportable">{{forms}}</div>
+    </div>
 
 
+
+      <!--<button ng-click="exportData()">Export</button>-->
+      <!--<br />-->
+      <!--<div id="exportablex">-->
+          <!--<table width="100%">-->
+              <!--<thead>-->
+              <!--<tr>-->
+                  <!--<th>Name</th>-->
+                  <!--<th>Email</th>-->
+                  <!--<th>DoB</th>-->
+              <!--</tr>-->
+              <!--</thead>-->
+              <!--<tbody>-->
+              <!--<tr ng-repeat="item in items">-->
+                  <!--<td>{{item.name}}</td>-->
+                  <!--<td>{{item.email}}</td>-->
+                  <!--<td>{{item.dob | date:'MM/dd/yy'}}</td>-->
+              <!--</tr>-->
+              <!--</tbody>-->
+          <!--</table>-->
+      <!--</div>-->
 
 
 <script type="text/ng-template" id="myMemberModalContent.html">
